@@ -21,6 +21,7 @@ Change Log:
 - Improve HTML output to be compatible with most themes (remove line breaks inside HTML tags)
 - Fix wrong subscription logic that activated Subscriptions without payment in a few cases
 - Fix possible memory issue that happened when updating the plugin
+- Fix bug that did not activate Subscription when an invoice was paid via Manual Gateway
 - Fix the invitation code Add-on (integration in payment form was not working)
 - Fix a caching issue that caused problems with Subscriptions when memcache was enabled
 - Fix problem in network wide mode that would not display all Users in the Members page
